--- a/public/index.less
+++ b/public/index.less
@@ -1,161 +1,5 @@
-@import './less/icon';
-@import './less/animate';
-@import './less/fn';
-
-@width:30/12rem;
-@rem:750/30rem;
-
-.none-select{
-  user-select:none;
-}
-//水平溢出隐藏
-.overflow-x{
-    overflow-x: hidden;
-}
-
-// 元素内最后增加一个元素
-.after{
-    &:after{
-        content:""; 
-        display:block; 
-        visibility: hidden; 
-        height:0; 
-        clear:both;
-    }
-}
-
-// 元素内最前面增加一个元素
-.before{
-    &:before{
-        content:""; 
-        display:block; 
-        visibility: hidden; 
-        height:0; 
-        clear:both;
-    }
-}
-
-//12格栅格布局
-//一行，清除浮动
-.row{
-    .after();
-    &>*{
-        box-sizing: border-box;
-    }
-}
-//列宽
-.col-for(1,12);
-//列间距
-.gap-for(1,12);
-
-.position-r{
-    position: relative;
-}
-.position-a{
-    position: absolute;
-}
-.border{
-    box-sizing: border-box;
-    border:1px solid #000;
-}
-// 圆角
-.border-radius{
-    border-radius:5px;
-}
-//外阴影
-.box-shadow{
-    box-shadow:1px 1px 2px #000;
-}
-//内阴影
-.box-shadow-inset{
-    box-shadow:-1px -1px 2px #000 inset;
-}
-
-//线性渐变
-.linear-0{
-    .linear(0deg,~'#f00,#0f0,#00f');
-}
-.linear-45{
-    .linear(45deg,~'#f00,#0f0,#00f');
-}
-.linear-90{
-    .linear(90deg,~'#f00,#0f0,#00f');
-}
-.linear-135{
-    .linear(135deg,~'#f00,#0f0,#00f');
-}
-.linear-180{
-    .linear(180deg,~'#f00,#0f0,#00f');
-}
-
-
-//径向渐变
-.radial-0-0{
-    .radial(0%,0%,4,~'#f00,#0f0,#00f');
-}
-.radial-100-0{
-    .radial(100%,0%,4,~'#f00,#0f0,#00f');
-}
-.radial-100-100{
-    .radial(100%,100%,4,~'#f00,#0f0,#00f');
-}
-.radial-0-100{
-    .radial(0%,100%,4,~'#f00,#0f0,#00f');
-}
-.radial-50-50{
-    .radial(50%,50%,4,~'#f00,#0f0,#00f');
-}
-
-/* flex的水平布局 */
-.flex-row{
-    display:flex;
-    flex-wrap:wrap;
-    flex-direction:row;
-    align-items:center;
-}
-/* flex的垂直布局 */
-.flex-column{
-    height:10rem;
-    display:flex;
-    flex-wrap:wrap;
-    flex-direction:column;
-    justify-content:center;
-}
-
-//flex的列宽
-.flex-for(1,10);
-
-//文本垂直居中
-.table{
-    display:table;
-}
-.table-cell{
-    display:table-cell; 
-    vertical-align:middle;
-}
-
-//文本水平居中
-.text-center{
-  text-align: center;
-}
-
-/* 元素水平垂直居中 */
-.center{
-    .position-a();
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-}
-
-.btn{
-  display:inline-block;
-  padding:2/@rem 4/@rem;
-  border-radius: 5/@rem;
-  background:#fff;
-  outline: none;
-
-  &:hover{
-    background:rgba(188,188,188,.2);
-  }
-}
-
+@import './public/less/animate';
+@import './public/less/icon';
+@import './public/less/fn';
+@import './public/less/yu';
+@import './public/less/reset';
