--- a/public/less/fn.less
+++ b/public/less/fn.less
@@ -1,3 +1,5 @@
+@rem:1190/30rem;
+
 // 12格布局的宽度
 .col-for(@i,@max) when(@i<=@max) { 
     .col-@{i}{ 
@@ -46,11 +48,13 @@
     }
     .flex-for(@i+1,@max);
 }
-
+.size(@name,@px){
+    @{name}:@px/@rem;
+}
 //背景图片设置
-.background-image(@url,@size:contain){
-    background-image: url("@{url}");
+.background-image(@url,@size:contain,@x:center,@y:center){
+    background-image: url(@url);
     background-repeat: no-repeat;
     background-size: @size;
-    background-position: center center;
+    background-position: @x @y;
 }
