--- a/public/less/icon.less
+++ b/public/less/icon.less
@@ -8,7 +8,7 @@
 
 .icon{
     font-family:"iconfont" !important;
-    font-size:16px;font-style:normal;
+    font-size:20/@rem;font-style:normal;
     -webkit-font-smoothing: antialiased;
     -webkit-text-stroke-width: 0.2px;
     -moz-osx-font-smoothing: grayscale;
