--- a/less/lib/reset.less
+++ b/less/lib/reset.less
@@ -19,12 +19,13 @@ time, mark, audio, video{
 //   border: 0;
 //   font-weight: normal;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 body,input,button{
-    font-size:14/@rem;
+    font-size:20/@rem;
 }
 html{
-    font-size:1190px/30;
+    font-size:1920px/30;
     margin: 0;
     padding: 0;
     border: 0;
@@ -38,7 +39,7 @@ html{
 }
 
 body{
-    user-select:none;  //内容不可选
+    // user-select:none;  //内容不可选
     overflow-x:hidden;  //水平方向的内容溢出被隐藏
 }
 img,input,select{
