--- a/less/fn.less
+++ b/less/fn.less
@@ -1,4 +1,5 @@
-@rem:1190/30rem;
+@rem:1920/30rem;
+@width:30/12rem;
 
 // 12格布局的宽度
 .col-for(@i,@max) when(@i<=@max) { 
@@ -48,13 +49,12 @@
     }
     .flex-for(@i+1,@max);
 }
-.size(@name,@px){
-    @{name}:@px/@rem;
-}
-//背景图片设置
 .background-image(@url,@size:contain,@x:center,@y:center){
     background-image: url(@url);
     background-repeat: no-repeat;
     background-size: @size;
     background-position: @x @y;
+}
+.size(@name,@px){
+    @{name}:@px/@rem;
 }
