--- a/less/lib/reset.less
+++ b/less/lib/reset.less
@@ -50,10 +50,9 @@ img,input,select{
 input[type="text"],input[type="password"],textarea{
     padding-left:8/@rem;
     outline-style:none;
-    -webkit-appearance:none
 }
 textarea{
-    resize:none
+    resize:none;
 }
 
 ul,ol {
