--- a/reset.less
+++ b/reset.less
@@ -1,16 +1,3 @@
-@media screen and(min-width:750px) {
-	@rem:750/40rem;
-	body{
-		font-size: 8/@rem;
-	}
-}
-
-@media screen and(max-width:750px) {
-	@rem:750/10rem;
-	body{
-		font-size: 28/@rem;
-	}
-}
 
 body, div, span, applet, object, iframe,
 blockquote, pre, p,
@@ -42,7 +29,7 @@ html{
 }
 
 body{
-	/* user-select:none; */  /* 内容不可选 */
+	user-select:none;  /* 内容不可选 */
 	overflow-x:hidden;  /* 水平方向的内容溢出被隐藏 */
 }
 
@@ -55,25 +42,42 @@ ul,ol {
 }
 
 a {
+	color:#000;
+	text-decoration: none;
+}
+/*正常的未被访问过的链接*/
+a:link {
+	text-decoration: none;
+}
+/*已经访问过的链接*/
+a:visited {
+	text-decoration: none;
+}
+/*鼠标划过(停留)的链接*/
+a:hover {
+	text-decoration: none;
+}
+/* 正在点击的链接*/
+a:active {
 	text-decoration: none;
 }
 
-
 input,button{
+	font-size: .8em;
 	outline:0;
-	line-height:24px;
-	border-radius: 4px;
+	line-height:.6rem;
+	border-radius: .1rem;
 	border:1px solid rgba(220, 223, 230,1);
 	background-color: #FFF;
 	box-sizing: border-box;
 }
 
 button{
-	padding:0 20px;
-	transition:all .2s;
+	padding:0 .5rem;
+	transition:all .1s;
 }
 input{
-	padding:0 10px;
+	padding:0 .3rem;
 }
 button:focus,input:hover,button:hover{
 	background-color: #e2f0ff;
